spacing/wording fix (anchor tag default decoration still showing on hover and spacing changing between logos on hover)

--- a/css/staffteam.css
+++ b/css/staffteam.css
@@ -302,11 +302,12 @@ body {
 
 .social-small-icon {
   color: rgb(255, 255, 255) !important; /* Adjust the color as needed */
-  margin: 0 10px; /* Adjust the spacing as needed */
+  margin: 0 20px; /* Adjust the spacing as needed */
   font-size: 120px; /* Adjust the size as needed */
-  text-decoration: none; /* Remove underline */
+  text-decoration: none !important; /* Remove underline */
   transition: color 0.3s; /* Add transition effect */
   line-height: 1; /* Ensure consistent line height */
+  display: inline-block; /* Ensures the element behaves more predictably */
 }
 
 .social-small-icon:hover {
